# Summarizz

./: .aidigestignore  .gitignore  README.md  azure-pipelines.yml  codebase.md  run.ps1  run.sh
.github/workflows/: dependency-review.yml
backend/: .env.sample  Dockerfile  bulk_write.sh  docker-compose.yml  eslint.config.mjs  jest.config.js  justfile  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  web.config  write_files.sh
backend/bluf-module/: .env.sample  Dockerfile  Makefile  __init__.py  app.py  models.yml  podep.ps1  pyproject.toml  requirements.txt  run.ps1  run.sh
backend/bluf-module/blueprints/: general.py  summarize.py
backend/bluf-module/blueprints/validator/: response.py
backend/bluf-module/config/: langchain_ai.py  llm_config.py
backend/bluf-module/lib/: constants.py  formatter.py  sanitizer.py
backend/bluf-module/models/: __init__.py  mai.py  prompt.py
backend/comment-module/controllers/: commentController.ts
backend/post-module/: TEMP.txt
backend/scripts/: deploy_test_pg_db.sh  postgres_deployment_script.sql  test_data.sql
backend/shared/: firebaseAdminConfig.ts  firebaseConfig.ts  loggingHandler.ts  server 2.ts  server.ts
backend/src/: app.config.ts  app.ts  server.ts
backend/src/bluf-module/: pyproject.toml
backend/src/bluf-module/models/: mai.py
backend/tests/: ai-module.spec.ts  user-module.spec.js  user-module.spec.js.map  user-module.spec.ts
docs/: CODEOWNERS
frontend/: index.html  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  types.d.ts
frontend/src/: App.tsx
(+316 files in other folders)
