[tool.poetry]
name = "bluf-module"
version = "1.0.1"
package-mode = false
description = "Summarizer API for Summarizz and all related entities"
authors = ["Muhammad Bilal Khan <@Hi-kue>"]
license = "MIT"

[tool.poetry.dependencies]
python=">=3.9,<4.0"
flask-cors = "^5.0.0"
flask-limiter = "^3.10.1"
flask = "^3.1.0"
rich = "^13.9.4"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
openrouter = "^1.0"
openai = "^1.63.0"
marshmallow = "^3.26.1"
tiktoken = "^0.9.0"
langchain = "^0.3.18"
langchain-openai = "^0.3.5"
langchain-together = "^0.3.0"
langchain-groq = "^0.2.4"
langchain-mistralai = "^0.2.6"
poetry-core = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"