[tool.poetry]
name = "bluf-module"
version = "1.0.0"
description = "Summarization and Quantification Module using AI with Python."
authors = ["Muhammad Bilal Khan <@Hi-kue>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask-cors = "^5.0.0"
flask-limiter = "^3.8.0"
flask = "^3.0.3"
rich = "^13.9.3"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
langchain = "^0.3.6"
langchain-openai = "^0.2.4"
openrouter = "^1.0"
openai = "^1.53.0"
marshmallow = "^3.23.0"
tiktoken = "^0.8.0"
flask-smorest = "^0.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
